# topic-bert

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yaml  lint-test.yml
scripts/: evaluate.sh  inference.sh  start_serve.sh  train.sh  tune.sh
src/: config.py  data.py  evaluate.py  models.py  predict.py  serve.py  train.py  tune.py  utils.py
tests/: conftest.py  test_data.py  test_models.py  test_predict.py  test_train.py  test_tune.py  test_utils.py
