[project]
name = "voize"
version = "0.1.0"
description = "Classifier of Yahoo Questions Topic Categories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "ray>=2.46.0",
    "scikit-learn>=1.6.1",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "pdbpp>=0.11.6",
    "black>=25.1.0",
    "isort>=6.0.1",
]
