[project]
name = "topic-bert"
version = "0.1.0"
description = "Classifier of Yahoo Questions Topic Categories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "hyperopt>=0.2.7",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.0",
    "numpyencoder>=0.3.1",
    "pytest-cov>=6.1.1",
    "ray[air]==2.31.0",
    "scikit-learn>=1.6.1",
    "snorkel>=0.10.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "typer>=0.15.4",
    "typing-extensions>=4.13.2",
]

[dependency-groups]
dev = [
    "pdbpp>=0.11.6",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
    "uv>=0.5.9"
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]

[tool.pytest.ini_options]
python_paths = ["."]
markers = [
    "training: marks tests as training tests (deselect with '-m \"not training\"')"
]
